implemented DummyMain